[tool.poetry]
name = "graphility"
version = "0.0.2"
description = "Fast pure-Python NoSQL database."
authors = [
    "Dominik Kozaczko <dominik@kozaczko.info>",
    "Codernity",
    "Nick M.",
    ]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/Gromobrody/graphility"
keywords = ["database", "nosql"]
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Topic :: Database",
        "Topic :: Database :: Database Engines/Servers",
        "Topic :: Internet",
        "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.11"
anyio = {version = "^4.4.0", extras = ["trio"]}
graphlib2 = "^0.4.7"
networkx = "^3.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pre-commit-hooks = "^4.6.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
mypy = "^1.11.1"
ipython = "^8.26.0"
ruff = "^0.5.5"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
rope = "^1.13.0"
#
#[tool.pytest.ini_options]
#minversion = "6.0"
#addopts = "-n4 -l"
#norecursedirs = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
